2015-11-02  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Added READ DISC STRUCTURE.

2015-11-01  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Typo in debug output.

2015-11-01  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Add MMC GET CONFIGURATION

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Solved some bugs found testing on usb flash sticks.

2015-10-31  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Added MODE SENSE to device information.

2015-10-24  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.csproj:
	  Added travis build description.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Device type, manufacturer, model, revision and serial number
	  are now obtained in device constructor.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Moved devices enums and structs out of classes.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs:
	  Implemented SCSI VPDs 0x00 to 0x80.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/Decode.cs:
	* Commands/DeviceInfo.cs:
	  Rename ATA/ATAPI decoders fields, methods and structs to
	  more adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/Decode.cs:
	* Commands/DeviceInfo.cs:
	  Rename SCSI decoders fields, methods and structs to more
	  adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/Decode.cs:
	* Commands/DeviceInfo.cs:
	  Separated SCSI decoders by type.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/Decode.cs:
	  Rename CD decoders fields, methods and structs to more
	  adequate names.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/Decode.cs:
	  Separated CD decoders by type.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceInfo.cs: